--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,34 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<developers>
+		<developer>
+			<name>Avelar Leão</name>
+			<email>awleao@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Luana Pires</name>
+			<email>luanapires@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Joelcy Linhares</name>
+			<email>joelcylinhares@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Juliana Magalhaes</name>
+			<email>julimagufc@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Tassio Virginio</name>
+			<email>tassiovirginio@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Tiago Moraes</name>
+			<email>tiagoefmoraes@gmail.com</email>
+		</developer>
+	</developers>
+
+
 	<dependencies>
 
 		<!-- WICKET DEPENDENCIES -->
@@ -215,8 +243,88 @@
 					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.5.1</version>
+				<configuration>
+					<check>
+						<haltOnFailure>false</haltOnFailure>
+						<totalLineRate>30</totalLineRate>
+						<totalBranchRate>10</totalBranchRate>
+					</check>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>clean</goal>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.9</version>
+				<configuration>
+					<failOnViolation>false</failOnViolation>
+					<configLocation>config/sun_checks.xml</configLocation>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>javancss-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration>
+					<configLocation>config/sun_checks.xml</configLocation>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<configuration>
+					<linkXref>true</linkXref>
+					<targetJdk>1.6</targetJdk>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>dashboard-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</reporting>
 
 	<repositories>
 		<repository>
