--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.5.1_1</version>
+				<version>2.5.1</version>
 				<configuration>
 					<check>
 						<haltOnFailure>false</haltOnFailure>
