--- a/pom.xml
+++ b/pom.xml
@@ -242,27 +242,6 @@
 					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<check>
-						<haltOnFailure>false</haltOnFailure>
-						<totalLineRate>30</totalLineRate>
-						<totalBranchRate>10</totalBranchRate>
-					</check>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>clean</goal>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -272,7 +251,6 @@
 					<configLocation>config/sun_checks.xml</configLocation>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 
@@ -284,14 +262,9 @@
 				<version>2.3</version>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.0</version>
-			</plugin>
-			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.5.1</version>
+				<artifactId>emma-maven-plugin</artifactId>
+				<version>1.0-alpha-3</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
