--- a/pom.xml
+++ b/pom.xml
@@ -329,6 +329,18 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+
+	<dependency>
+		<groupId>com.google.api.client</groupId>
+		<artifactId>google-api-client</artifactId>
+		<version>1.2.1-alpha</version>
+		<exclusions>
+			<exclusion>
+				<artifactId>jsr305</artifactId>
+				<groupId>com.google.code.findbugs</groupId>
+			</exclusion>
+		</exclusions>
+	</dependency>
 	</dependencies>
 
 </project>
