--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit-dep</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		
 		<!-- JETTY DEPENDENCIES FOR TESTING -->
 		<dependency>
 			<groupId>org.eclipse.jetty.aggregate</groupId>
@@ -341,6 +348,19 @@
 			</exclusion>
 		</exclusions>
 	</dependency>
+	
+	<dependency>
+    	<groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>2.13.0</version>
+    </dependency> 
+
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.1.2</version>
+	</dependency>
+
 	</dependencies>
 
 </project>
