--- a/pom.xml
+++ b/pom.xml
@@ -117,15 +117,21 @@
 					</connectors>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
+				<version>2.9</version>
 				<configuration>
 					<downloadSources>true</downloadSources>
 					<encoding>utf-8</encoding>
+					<workspace>${basedir}</workspace>
+					<workspaceCodeStylesURL>
+						file:maven-styles.xml
+					</workspaceCodeStylesURL>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
